[package]
name = "genio"
version = "0.1.1"
authors = ["Martin Habovštiak <martin.habovstiak@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["io", "generic", "read", "write"]
repository = "https://github.com/Kixunil/genio"
homepage = "https://github.com/Kixunil/genio"
documentation = "https://docs.rs/genio"
description = """
A type safe, low level replacement for `std::io`.

Because of limitations of `std::io::Error` type, `genio` provides `Read` and
`Write` traits that allow implementors to choose their own type. This type can
be better at expressing what kinds of error can happen.
"""

[dependencies]
void = "1"

[features]
default = ["use_std"]

use_std = []
